--- a/angular.json
+++ b/angular.json
@@ -19,7 +19,7 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-builders/custom-webpack:browser",
+          "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/iter",
             "index": "src/index.html",
@@ -32,28 +32,48 @@
               "node_modules/ng-zorro-antd/resizable/style/index.min.css",
               "node_modules/ng-zorro-antd/code-editor/style/index.min.css",
               "node_modules/ng-zorro-antd/graph/style/index.min.css",
-              "src/styles.scss"
+              "node_modules/tailwindcss/tailwind.css",
+              "src/styles.scss",
+              {
+                "input": "node_modules/tailwindcss/base.css"
+              },
+              {
+                "input": "node_modules/tailwindcss/components.css"
+              },
+              {
+                "input": "node_modules/tailwindcss/utilities.css"
+              }
             ],
-            "scripts": [],
-            "customWebpackConfig": {
-              "path": "webpack.config.js"
-            }
+            "scripts": []
           },
           "configurations": {
             "production": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "1.6mb",
+                  "maximumError": "2mb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
+                  "maximumWarning": "4kb",
+                  "maximumError": "8kb"
                 }
               ],
-              "outputHashing": "all"
+              "sourceMap": false,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "outputHashing": "all",
+              "optimization": true
             },
             "development": {
               "buildOptimizer": false,
@@ -61,7 +81,13 @@
               "vendorChunk": true,
               "extractLicenses": false,
               "sourceMap": true,
-              "namedChunks": true
+              "namedChunks": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.dev.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -95,6 +121,7 @@
               "node_modules/ng-zorro-antd/resizable/style/index.min.css",
               "node_modules/ng-zorro-antd/code-editor/style/index.min.css",
               "node_modules/ng-zorro-antd/graph/style/index.min.css",
+              "node_modules/tailwindcss/tailwind.css",
               "src/styles.scss"
             ],
             "scripts": [],
