--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host 0.0.0.0",
+    "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -22,8 +22,15 @@
     "@ant-design/icons-angular": "^15.0.0",
     "@ngrx/store": "^15.3.0",
     "@ngrx/store-devtools": "^15.4.0",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
+    "mini-css-extract-plugin": "^2.7.6",
     "ng-zorro-antd": "^15.0.3",
+    "node-sass": "^8.0.0",
+    "postcss-loader": "^7.3.2",
+    "postcss-preset-env": "^8.4.2",
     "rxjs": "~7.8.0",
+    "sass-loader": "^13.3.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
@@ -33,15 +40,17 @@
     "@angular/compiler-cli": "^15.1.0",
     "@ngneat/tailwind": "^7.0.3",
     "@types/jasmine": "~4.3.0",
-    "autoprefixer": "^10.4.13",
+    "autoprefixer": "^10.4.14",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4",
+    "postcss": "^8.4.24",
+    "sass": "^1.63.3",
+    "style-loader": "^3.3.3",
+    "tailwindcss": "^3.3.2",
     "typescript": "~4.9.4"
   }
 }
